Adding More Features

--- a/XeniaPatchMaker/App.config
+++ b/XeniaPatchMaker/App.config
@@ -1,6 +1,78 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="XeniaPatchMaker.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+    <userSettings>
+        <XeniaPatchMaker.Properties.Settings>
+            <setting name="title_name" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="title_id" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="hash" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="media_id" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="patchHeader" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="name" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="desc" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="author" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="is_enabled" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="patchTypeHeader" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="address" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="value" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="title_nameInput" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="title_idInput" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="hashinput" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="media_idInput" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="nameInput" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="descInput" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="authorInput" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="addressInput" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="valueInput" serializeAs="String">
+                <value />
+            </setting>
+        </XeniaPatchMaker.Properties.Settings>
+    </userSettings>
 </configuration>
