--- a/XeniaPatchMaker/XeniaPatchMaker.csproj
+++ b/XeniaPatchMaker/XeniaPatchMaker.csproj
@@ -112,7 +112,13 @@
       <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
+    <Reference Include="Octokit, Version=0.3.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Octokit.0.3.4\lib\net45\Octokit.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
+    <Reference Include="Semver, Version=1.1.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\semver.1.1.2\lib\net451\Semver.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.AppContext, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.AppContext.4.3.0\lib\net463\System.AppContext.dll</HintPath>
@@ -256,11 +262,25 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Loading Screen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Loading Screen.Designer.cs">
+      <DependentUpon>Loading Screen.cs</DependentUpon>
+    </Compile>
     <Compile Include="Settings.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Settings.Designer.cs">
       <DependentUpon>Settings.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Util\GitHubUpdate\Helper.cs" />
+    <Compile Include="Util\GitHubUpdate\UpdateChecker.cs" />
+    <Compile Include="Util\GitHubUpdate\UpdateNotifyDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Util\GitHubUpdate\UpdateNotifyDialog.Designer.cs">
+      <DependentUpon>UpdateNotifyDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="Util\IXmlSerializable.cs" />
     <Compile Include="Util\PatchUtil.cs" />
@@ -280,9 +300,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Loading Screen.resx">
+      <DependentUpon>Loading Screen.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Settings.resx">
       <DependentUpon>Settings.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Util\GitHubUpdate\UpdateNotifyDialog.resx">
+      <DependentUpon>UpdateNotifyDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ValueConverter.resx">
       <DependentUpon>ValueConverter.cs</DependentUpon>
