--- a/XeniaPatchMaker/packages.config
+++ b/XeniaPatchMaker/packages.config
@@ -2,10 +2,13 @@
 <packages>
   <package id="Costura.Fody" version="5.3.0" targetFramework="net48" developmentDependency="true" />
   <package id="Fody" version="6.5.1" targetFramework="net48" developmentDependency="true" />
+  <package id="GitHubUpdate" version="1.2.0.0" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
+  <package id="Octokit" version="0.3.4" targetFramework="net48" />
+  <package id="semver" version="1.1.2" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net48" />
   <package id="System.Collections" version="4.3.0" targetFramework="net48" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net48" />
