--- a/XeniaPatchMaker/App.config
+++ b/XeniaPatchMaker/App.config
@@ -73,6 +73,9 @@
             <setting name="valueInput" serializeAs="String">
                 <value />
             </setting>
+            <setting name="DisableDesc" serializeAs="String">
+                <value>False</value>
+            </setting>
         </XeniaPatchMaker.Properties.Settings>
     </userSettings>
 </configuration>
