--- a/XeniaPatchMaker/Properties/Settings.settings
+++ b/XeniaPatchMaker/Properties/Settings.settings
@@ -65,5 +65,8 @@
     <Setting Name="valueInput" Type="System.Drawing.Color" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="DisableDesc" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
