--- a/XeniaPatchMaker/App.config
+++ b/XeniaPatchMaker/App.config
@@ -76,6 +76,33 @@
             <setting name="DisableDesc" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="WriteInfo" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="HideValueConverter" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AutoDelete" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DisableMessageBox" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ColorDisabled" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DefaultAuthors" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="UseDefaultAuthors" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DisableValueConverter" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DisableAuthors" serializeAs="String">
+                <value>False</value>
+            </setting>
         </XeniaPatchMaker.Properties.Settings>
     </userSettings>
 </configuration>
