Adding New Featuress

--- a/XeniaPatchMaker/App.config
+++ b/XeniaPatchMaker/App.config
@@ -97,11 +97,14 @@
             <setting name="UseDefaultAuthors" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="DisableValueConverter" serializeAs="String">
+            <setting name="IsValueConverter" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="DisableAuthors" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="AddressMath" serializeAs="String">
+                <value>0</value>
             </setting>
         </XeniaPatchMaker.Properties.Settings>
     </userSettings>
