--- a/XeniaPatchMaker/Properties/Settings.settings
+++ b/XeniaPatchMaker/Properties/Settings.settings
@@ -89,11 +89,14 @@
     <Setting Name="UseDefaultAuthors" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="DisableValueConverter" Type="System.Boolean" Scope="User">
+    <Setting Name="IsValueConverter" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="DisableAuthors" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="AddressMath" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
     </Setting>
   </Settings>
 </SettingsFile>
