--- a/XeniaPatchMaker/App.config
+++ b/XeniaPatchMaker/App.config
@@ -1,111 +1,154 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="XeniaPatchMaker.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
-    </startup>
-    <userSettings>
-        <XeniaPatchMaker.Properties.Settings>
-            <setting name="title_name" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="title_id" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="hash" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="media_id" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="patchHeader" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="name" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="desc" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="author" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="is_enabled" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="patchTypeHeader" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="address" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="value" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="title_nameInput" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="title_idInput" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="hashinput" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="media_idInput" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="nameInput" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="descInput" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="authorInput" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="addressInput" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="valueInput" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="DisableDesc" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="WriteInfo" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="HideValueConverter" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="AutoDelete" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="DisableMessageBox" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="ColorDisabled" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="DefaultAuthors" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="UseDefaultAuthors" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="IsValueConverter" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="DisableAuthors" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="AddressMath" serializeAs="String">
-                <value>0</value>
-            </setting>
-        </XeniaPatchMaker.Properties.Settings>
-    </userSettings>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="XeniaPatchMaker.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System">
+      <section name="DevExpress.LookAndFeel.Design.AppSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <applicationSettings>
+    <DevExpress.LookAndFeel.Design.AppSettings>
+      <setting name="DefaultAppSkin" serializeAs="String">
+        <value>Skin/Visual Studio 2013 Dark</value>
+      </setting>
+      <setting name="DefaultPalette" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="TouchUI" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="CompactUI" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="TouchScaleFactor" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="DirectX" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="RegisterUserSkins" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="RegisterBonusSkins" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="FontBehavior" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="DefaultAppFont" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="DPIAwarenessMode" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="CustomPaletteCollection" serializeAs="Xml">
+        <value />
+      </setting>
+    </DevExpress.LookAndFeel.Design.AppSettings>
+  </applicationSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+  </startup>
+  <userSettings>
+    <XeniaPatchMaker.Properties.Settings>
+      <setting name="title_name" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="title_id" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="hash" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="media_id" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="patchHeader" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="name" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="desc" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="author" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="is_enabled" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="patchTypeHeader" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="address" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="value" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="title_nameInput" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="title_idInput" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="hashinput" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="media_idInput" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="nameInput" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="descInput" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="authorInput" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="addressInput" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="valueInput" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="DisableDesc" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="WriteInfo" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="HideValueConverter" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="AutoDelete" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="DisableMessageBox" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="ColorDisabled" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="DefaultAuthors" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="UseDefaultAuthors" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="IsValueConverter" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="DisableAuthors" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="AddressMath" serializeAs="String">
+        <value>1</value>
+      </setting>
+    </XeniaPatchMaker.Properties.Settings>
+  </userSettings>
 </configuration>
