--- a/XeniaPatchMaker/App.config
+++ b/XeniaPatchMaker/App.config
@@ -149,6 +149,62 @@
       <setting name="AddressMath" serializeAs="String">
         <value>1</value>
       </setting>
+      <setting name="mainheadercolor1" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="mainheadercolor2" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="mainheadercolor3" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="mainheadercolor4" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="patchInfoColor1" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="patchInfoColor2" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="patchInfoColor3" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="PatchAddressColor1" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="PatchAddressColor2" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="PatchAddressColor3" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="PatchAddressColor4" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="SavedPath" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="SavePathBool" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="PatchUseColor" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="PatchInfoUseColor" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="MainUseColor" serializeAs="String">
+        <value>False</value>
+      </setting>
     </XeniaPatchMaker.Properties.Settings>
   </userSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
