--- a/XeniaPatchMaker/XeniaPatchMaker.csproj
+++ b/XeniaPatchMaker/XeniaPatchMaker.csproj
@@ -51,7 +51,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>patch.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\patch.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Costura, Version=5.7.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -343,8 +343,8 @@
   <ItemGroup>
     <None Include="Resources\Asset 1.png" />
     <EmbeddedResource Include="Properties\DB.xml" />
-    <Content Include="Asset 1.ico" />
-    <Content Include="patch.ico" />
+    <Content Include="Resources\Asset 1.ico" />
+    <Content Include="Resources\patch.ico" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.8">
