--- a/XeniaPatchMaker/packages.config
+++ b/XeniaPatchMaker/packages.config
@@ -1,14 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Costura.Fody" version="5.7.0" targetFramework="net48" developmentDependency="true" />
-  <package id="Fody" version="6.6.0" targetFramework="net48" developmentDependency="true" />
+  <package id="Fody" version="6.6.3" targetFramework="net48" developmentDependency="true" />
   <package id="GitHubUpdate" version="1.2.0.0" targetFramework="net48" />
-  <package id="Microsoft.NETCore.Platforms" version="6.0.1" targetFramework="net48" />
+  <package id="Microsoft.NETCore.Platforms" version="6.0.4" targetFramework="net48" />
+  <package id="Microsoft.NETFramework.ReferenceAssemblies" version="1.0.2" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.NETFramework.ReferenceAssemblies.net48" version="1.0.2" targetFramework="net48" developmentDependency="true" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
-  <package id="Octokit" version="0.50.0" targetFramework="net48" />
-  <package id="Semver" version="2.0.6" targetFramework="net48" />
+  <package id="Octokit" version="0.51.0" targetFramework="net48" />
+  <package id="Semver" version="2.2.0" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections" version="4.3.0" targetFramework="net48" />
@@ -27,7 +29,7 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.Linq" version="4.3.0" targetFramework="net48" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net48" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
   <package id="System.Net.Primitives" version="4.3.1" targetFramework="net48" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net48" />
@@ -56,4 +58,5 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net48" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net48" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net48" />
+  <package id="Tommy" version="3.1.2" targetFramework="net48" />
 </packages>
